[package]
name = "psychic-octo-giggle"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
regex = "1"

[dependencies.mio]
version = "0.7.11"
features = ["net", "os-poll"]
